--- a/posts/basicspa-codingkeypoints.mdx
+++ b/posts/basicspa-codingkeypoints.mdx
@@ -10,9 +10,9 @@ The SPA uses the following types of static resource that are downloaded to the b
 
 | Area | Implementation Details |
 | ---- | ---------------------- |
-| <span style='color:green'>**HTML**</span> | We use a single static index.html page and its DOM elements are updated dynamically |
-| <span style='color:green'>**CSS**</span> | We use [Bootstrap](https://getbootstrap.com/docs/4.0/getting-started/introduction/) to control layout in a mobile first manner, and for most styling |
-| <span style='color:green'>**JavaScript**</span> | We use TypeScript code that gets compiled to JavaScript bundles when it runs in the browser |
+| <span style={{color:'green'}}>**HTML**</span> | We use a single static index.html page and its DOM elements are updated dynamically |
+| <span style={{color:'green'}}>**CSS**</span> | We use [Bootstrap](https://getbootstrap.com/docs/4.0/getting-started/introduction/) to control layout in a mobile first manner, and for most styling |
+| <span style={{color:'green'}}>**JavaScript**</span> | We use TypeScript code that gets compiled to JavaScript bundles when it runs in the browser |
 
 The SPA uses only a handful of external dependencies, expressed in its package.json file. The most interesting of these is the oidc-client-ts library, which implements OpenID Connect in JavaScript.
 
