--- a/posts/basicspa-overview.mdx
+++ b/posts/basicspa-overview.mdx
@@ -10,11 +10,11 @@ The behaviour provided in our initial sample is summarised below:
 
 | Behaviour | Description |
 | --------- | ----------- |
-| <span style='color:green'>**Authorization Server**</span> | Developers can connect to a Cloud Authorization Server from code running on their PC |
-| <span style='color:green'>**SPA Security**</span> | Our SPA uses Authorization Code Flow (PKCE) for logins and uses Access Tokens to call the API |
-| <span style='color:green'>**API Security**</span> | The Web API validates JWT access tokens, then works with claims to implement authorization |
-| <span style='color:green'>**Reliable**</span> | Both the SPA and API handle expiry and other failure conditions in a solid manner |
-| <span style='color:green'>**Real World URLs**</span> | The SPA makes cross domain calls to the API on the local PC, and OAuth messages are viewable |
+| <span style={{color:'green'}}>**Authorization Server**</span> | Developers can connect to a Cloud Authorization Server from code running on their PC |
+| <span style={{color:'green'}}>**SPA Security**</span> | Our SPA uses Authorization Code Flow (PKCE) for logins and uses Access Tokens to call the API |
+| <span style={{color:'green'}}>**API Security**</span> | The Web API validates JWT access tokens, then works with claims to implement authorization |
+| <span style={{color:'green'}}>**Reliable**</span> | Both the SPA and API handle expiry and other failure conditions in a solid manner |
+| <span style={{color:'green'}}>**Real World URLs**</span> | The SPA makes cross domain calls to the API on the local PC, and OAuth messages are viewable |
 
 ### Components
 
@@ -24,7 +24,7 @@ The Basic SPA Code Sample will get the below components and endpoints talking to
 
 ### SPAs in 2021
 
-<span style='color:red'>This sample uses the traditional SPA solution, with OpenID Connect implemented solely in Javascript. This is no longer recommended, and your production apps should instead use a [Backend for Frontend](/posts/spa-back-end-for-front-end) approach.</span>
+<span style={{color:'red'}}>This sample uses the traditional SPA solution, with OpenID Connect implemented solely in Javascript. This is no longer recommended, and your production apps should instead use a [Backend for Frontend](/posts/spa-back-end-for-front-end) approach.</span>
 
 The traditional SPA flow remains useful for representing a pure SPA architecture, and learning about OAuth endpoints and messages. This blog's [Final SPA](https://authguidance.com/final-spa-overview/) provides a BFF based solution, but requires a more complex flow.
 
@@ -40,8 +40,8 @@ In our SPA and API we will use the following respected open source libraries, wh
 
 | Component | Library | Features |
 | --------- | ------- | -------- |
-| <span style='color:green'>**SPA**</span> | [oidc-client-ts](https://github.com/authts/oidc-client-ts) | Implements OpenID Connect lifecycle events for a browser based client, including logins, logouts and token renewal |
-| <span style='color:green'>**API**</span> | [jose](https://github.com/panva/jose) | Validates JWT access tokens, returns claims and manages looking up and caching of token signing public keys |
+| <span style={{color:'green'}}>**SPA**</span> | [oidc-client-ts](https://github.com/authts/oidc-client-ts) | Implements OpenID Connect lifecycle events for a browser based client, including logins, logouts and token renewal |
+| <span style={{color:'green'}}>**API**</span> | [jose](https://github.com/panva/jose) | Validates JWT access tokens, returns claims and manages looking up and caching of token signing public keys |
 
 ### Programming Languages
 
@@ -49,8 +49,8 @@ This blog will use multiple technologies, and they will all be modern and cross 
 
 | Component | Language | Platforms |
 | --------- | -------- | --------- |
-| <span style='color:green'>**SPA**</span> | TypeScript | Chrome / Edge / Firefox / Safari / Mobile |
-| <span style='color:green'>**API**</span> | Node.js + TypeScript | Windows / macOS / Linux |
+| <span style={{color:'green'}}>**SPA**</span> | TypeScript | Chrome / Edge / Firefox / Safari / Mobile |
+| <span style={{color:'green'}}>**API**</span> | Node.js + TypeScript | Windows / macOS / Linux |
 
 ### Simple Web Technology for Early Samples
 
@@ -58,8 +58,8 @@ We will use modern web technology, but will avoid web frameworks to start with, 
 
 | Step | Details |
 | ---- | ------- |
-| <span style='color:green'>**SPA OAuth Coding Model**</span> | First show how to integrate standards based OAuth support into a Simple SPA so that we can focus on OAuth requirements |
-| <span style='color:green'>**Modern SPA Framework**</span> | Avoid getting sidetracked by too much web technology initially, though later our Final SPA will use React |
+| <span style={{color:'green'}}>**SPA OAuth Coding Model**</span> | First show how to integrate standards based OAuth support into a Simple SPA so that we can focus on OAuth requirements |
+| <span style={{color:'green'}}>**Modern SPA Framework**</span> | Avoid getting sidetracked by too much web technology initially, though later our Final SPA will use React |
 
 ### Our Code Sample Theme
 
