--- a/posts/home.mdx
+++ b/posts/home.mdx
@@ -20,10 +20,10 @@ Before most APIs and clients can be run in production, they need foundations. An
 
 | Quality | Description |
 | ------- | ----------- | 
-| <span style='color:green'>**Secure**</span> | Dealing with user authentication and API message credentials, to secure access to data |
-| <span style='color:green'>**Reliable**</span> | Ensuring that the moving parts of the overall implementation provide a reliable solution |
-| <span style='color:green'>**Productive**</span> | The setup should be understood by engineering teams and should not have adverse effects on how they run their components |
-| <span style='color:green'>**Scalable**</span> | It must be possible to extend the architecture to many components, without a major increase in complexity |
+| <span style={{color:'green'}}>**Secure**</span> | Dealing with user authentication and API message credentials, to secure access to data |
+| <span style={{color:'green'}}>**Reliable**</span> | Ensuring that the moving parts of the overall implementation provide a reliable solution |
+| <span style={{color:'green'}}>**Productive**</span> | The setup should be understood by engineering teams and should not have adverse effects on how they run their components |
+| <span style={{color:'green'}}>**Scalable**</span> | It must be possible to extend the architecture to many components, without a major increase in complexity |
 
 ### The OAuth 2.0 Authorization Framework
 
@@ -37,10 +37,10 @@ Yet I have often seen people struggle to implement OAuth and realise its benefit
 
 This blog first shows developers how to get secure end-to-end API and client flows working. This blog’s security covers only the mainstream options of consuming JWT access tokens in APIs and externalizing user authentication from clients by running an OpenID Connect code flow. It then dives deeper to explain some lessons I’ve learned related to resilient API and client journeys:
 
-- Designing for <span style='color:green'>**manageability**</span> to avoid pain points
-- Coding with <span style='color:green'>**portability**</span> to keep future options open
-- Ensuring <span style='color:green'>**reliability**</span> by rehearsing failure scenarios
-- Enabling <span style='color:green'>**productivity**</span> by also considering developer setups
+- Designing for <span style={{color:'green'}}>**manageability**</span> to avoid pain points
+- Coding with <span style={{color:'green'}}>**portability**</span> to keep future options open
+- Ensuring <span style={{color:'green'}}>**reliability**</span> by rehearsing failure scenarios
+- Enabling <span style={{color:'green'}}>**productivity**</span> by also considering developer setups
 
 ### Code Samples
 
