--- a/posts/home.mdx
+++ b/posts/home.mdx
@@ -58,5 +58,5 @@ We have summarized blog goals and the first objective will be to deliver an init
 
 ### Next
 
-- Before getting started coding we will summarize some [Web Architecture Goals](/posts/web-architecture-goals)
-- For a list of all blog posts see the [Index Page](/posts/index)
+- Before getting started coding we will summarize some <Link href='/posts/web-architecture-goals'>Web Architecture Goals</Link>
+- For a list of all blog posts see the <Link href='/posts/index'>Index Page</Link>
