--- a/posts/quick-start.mdx
+++ b/posts/quick-start.mdx
@@ -14,7 +14,7 @@ This is a React SPA that implements OpenID Connect via the **Token Handler Patte
 
 ![SPA view](/images/3/spa-view.jpg)
 
-The SPA is deployed to many global locations using AWS Cloudfront. Anyone can run the app via the below link. To run the app locally you can follow the [Final SPA Instructions](/posts/how-to-run-the-react-js-spa).
+The SPA is deployed to many global locations using AWS Cloudfront. Anyone can run the app via the below link. To run the app locally you can follow the <Link href='/posts/how-to-run-the-react-js-spa'>Final SPA Instructions</Link>.
 
 - https`:`//web.authsamples.com
 
@@ -26,7 +26,7 @@ The Desktop Sample is a cross platform Electron React App that runs on Windows, 
 
 ![Desktop view](/images/3/desktop-view.jpg)
 
-A Private URI Scheme is used to notify the app of the login result and return it to the foreground. To run the app on your local PC you can follow the [Final Desktop App Instructions](/posts/final-desktop-sample-overview).
+A Private URI Scheme is used to notify the app of the login result and return it to the foreground. To run the app on your local PC you can follow the <Link href='/posts/final-desktop-sample-overview'>Final Desktop App Instructions</Link>.
 
 ![Desktop login](/images/3/desktop-login.jpg)
 
@@ -36,7 +36,7 @@ The Android App is a Single Activity App coded via Kotlin and Jetpack Compose. O
 
 ![Android view](/images/3/android-view.jpg)
 
-Logins are managed via a Chrome Custom Tab, with modern security and good usability. To run the app from Android Studio you can follow the [Android Code Sample Instructions](/posts/basicandroidapp-execution).
+Logins are managed via a Chrome Custom Tab, with modern security and good usability. To run the app from Android Studio you can follow the <Link href='/posts/basicandroidapp-execution'>Android Code Sample Instructions</Link>.
 
 ![Android login](/images/3/android-login.jpg)
 
@@ -46,7 +46,7 @@ The iOS App is developed using SwiftUI with equivalent behaviour, and Open ID Co
 
 ![iOS view](/images/3/ios-view.jpg)
 
-Logins are managed via Apple’s ASWebAuthenticationSession window. To run the app from Xcode you can follow the [iOS Code Sample Instructions](/posts/how-to-run-the-ios-code-sample).
+Logins are managed via Apple’s ASWebAuthenticationSession window. To run the app from Xcode you can follow the <Link href='/posts/how-to-run-the-ios-code-sample'>iOS Code Sample Instructions</Link>.
 
 ![iOS login](/images/3/ios-login.jpg)
 
@@ -54,10 +54,10 @@ Logins are managed via Apple’s ASWebAuthenticationSession window. To run the a
 
 The frontend code samples are supported by backend APIs. The following blog posts walk through the key technical behaviours implemented by samples, including areas such as reliability, extensibility and productive development. In addition to good security, the end result should be a modern all round architecture with the best separation of concerns.
 
-- [API Journey – Client Side](/posts/api-journey-client-side)
-- [API Journey – Server Side](/post/api-journey-server-side)
+- <Link href='/post/api-journey-server-side'>API Journey – Server Side</Link>
+- <Link href='/posts/api-journey-client-side'>API Journey – Client Side</Link>
 
 ### Next
 
-- Return to the [Home Page](/)
-- For a list of all blog posts see the [Index Page](/posts/index)
+- Return to the <Link href='/'>Home Page</Link>
+- For a list of all blog posts see the <Link href='/posts/index'>Index Page</Link>
