--- a/posts/about.mdx
+++ b/posts/about.mdx
@@ -16,5 +16,5 @@ The content is built as a basic Next.js blog and is available in the following G
 
 ### Next
 
-- Return to the [Home Page](/)
-- For a list of all blog posts see the [Index Page](/posts/index)
+- Return to the <Link href='/'>Home Page</Link>
+- For a list of all blog posts see the <Link href='/posts/index'>Index Page</Link>
