--- a/posts/index.mdx
+++ b/posts/index.mdx
@@ -12,46 +12,46 @@ Our first theme is focused on foundations and core concepts. It provides integra
 
 **Basic SPA Code Sample**
 
-- [Overview](/posts/basicspa-overview)
-- [How to Run the Sample](/posts/basicspa-execution)
-- [OAuth Messages](/posts/basicspa-oauthworkflow)
-- [SPA Coding Key Points](/posts/basicspa-codingkeypoints)
-- [API Coding Key Points](/posts/basicapi-codingkeypoints)
-- [JWT Access Token Validation](/posts/jwt-access-token-validation)
+- <Link href='/posts/basicspa-overview'>Overview</Link>
+- <Link href='/posts/basicspa-execution'>How to Run the Sample</Link>
+- <Link href='/posts/basicspa-oauthworkflow'>OAuth Messages</Link>
+- <Link href='/posts/basicspa-codingkeypoints'>SPA Coding Key Points</Link>
+- <Link href='/posts/basicapi-codingkeypoints'>API Coding Key Points</Link>
+- <Link href='/posts/jwt-access-token-validation'>JWT Access Token Validation</Link>
 
 **OAuth Setup**
 
-- [Initial Authorization Server Setup](/posts/oauth-infrastructure-setup)
-- [JavaScript Technology Setup](/posts/web-technology-setup)
-- [HTTP Proxy Setup](/posts/http-debugging-setup)
-- [SSL Trust Configuration](/posts/developer-ssl-setup)
+- <Link href='/posts/oauth-infrastructure-setup'>Initial Authorization Server Setup</Link>
+- <Link href='/posts/web-technology-setup'>JavaScript Technology Setup</Link>
+- <Link href='/posts/http-debugging-setup'>HTTP Proxy Setup</Link>
+- <Link href='/posts/developer-ssl-setup'>SSL Trust Configuration</Link>
 
 **Design Articles**
 
-- [User Data Management](/posts/user-data)
-- [API Authorization Behaviour](/posts/api-authorization-design)
-- [User Authentication Behaviour](/posts/federated-logins)
-- [IFrame Access Token Renewal](/posts/user-sessions-and-token-renewal)
-- [Logout](/posts/logout)
-- [ID Tokens](/posts/id-tokens)
+- <Link href='/posts/user-data'>User Data Management</Link>
+- <Link href='/posts/api-authorization-design'>API Authorization Behaviour</Link>
+- <Link href='/posts/federated-logins'>User Authentication Behaviour</Link>
+- <Link href='/posts/user-sessions-and-token-renewal'>IFrame Access Token Renewal</Link>
+- <Link href='/posts/logout'>Logout</Link>
+- <Link href='/posts/id-tokens'>ID Tokens</Link>
 
 **Updated SPA Code Sample**
 
-- [Overview / How to Run the Sample](/posts/improved-spa-code-sample-overview)
-- [SPA Coding Key Points](/posts/updated-spa-coding-key-points)
-- [API Coding Key Points](/posts/updated-api-coding-key-points)
+- <Link href='/posts/improved-spa-code-sample-overview'>Overview / How to Run the Sample</Link>
+- <Link href='/posts/updated-spa-coding-key-points'>SPA Coding Key Points</Link>
+- <Link href='/posts/updated-api-coding-key-points'>API Coding Key Points</Link>
 
 **Variation – Microsoft Entra ID**
 
-- [Entra ID SPA and API Setup](/posts/azure-active-directory-setup)
-- [Entra ID SPA and API OAuth Flow](/posts/azure-ad-troubleshooting)
+- <Link href='/posts/azure-active-directory-setup'>Entra ID SPA and API Setup</Link>
+- <Link href='/posts/azure-ad-troubleshooting'>Entra ID SPA and API OAuth Flow</Link>
 
 **Final SPA Code Sample**
 
-- [Backend for Frontend Behaviour](/posts/spa-back-end-for-front-end)
-- [Overview](/posts/final-spa-overview)
-- [How to Run the Sample](/posts/how-to-run-the-react-js-spa)
-- [SPA Coding Key Points](/posts/reactjs-codingkeypoints)
+- <Link href='/posts/spa-back-end-for-front-end'>Backend for Frontend Behaviour</Link>
+- <Link href='/posts/final-spa-overview'>Overview</Link>
+- <Link href='/posts/how-to-run-the-react-js-spa'>How to Run the Sample</Link>
+- <Link href='/posts/reactjs-codingkeypoints'>SPA Coding Key Points</Link>
 
 ### Theme 2 – API Architecture
 
@@ -59,75 +59,75 @@ In the next theme we focus more deeply on the API architecture. This includes co
 
 **Productive API Architecture Design**
 
-- [API Platform Behaviour](/posts/api-platform-design)
-- [API Journey – Server Side](/posts/api-journey-server-side)
-- [API Journey – Client Side](/posts/api-journey-client-side)
+- <Link href='/posts/api-platform-design'>API Platform Behaviour</Link>
+- <Link href='/posts/api-journey-server-side'>API Journey – Server Side</Link>
+- <Link href='/posts/api-journey-client-side'>API Journey – Client Side</Link>
 
 **Supportability**
 
-- [Effective API Logging](/posts/effective-api-logging)
-- [Error Handling and Supportability](/posts/error-handling-and-supportability)
+- <Link href='/posts/effective-api-logging'>Effective API Logging</Link>
+- <Link href='/posts/error-handling-and-supportability'>Error Handling and Supportability</Link>
 
 **Node.js API**
 
-- [Overview](/posts/api-architecture-node)
-- [Coding Model](/posts/final-nodeapi-coding-key-points)
+- <Link href='/posts/api-architecture-node'>Overview</Link>
+- <Link href='/posts/final-nodeapi-coding-key-points'>Coding Model</Link>
 
 **.NET API**
 
-- [Overview](/posts/net-core-code-sample-overview)
-- [OAuth Integration](/posts/net-core-api-oauth-integration)
-- [Coding Model](/posts/net-core-api-coding-model)
+- <Link href='/posts/net-core-code-sample-overview'>Overview</Link>
+- <Link href='/posts/net-core-api-oauth-integration'>OAuth Integration</Link>
+- <Link href='/posts/net-core-api-coding-model'>Coding Model</Link>
 
 **Java Spring Boot API**
 
-- [Overview](/posts/java-spring-boot-api-overview)
-- [OAuth Integration](/posts/spring-boot-api-oauth-integration)
-- [Coding Model](/posts/spring-boot-api-coding-model)
+- <Link href='/posts/java-spring-boot-api-overview'>Overview</Link>
+- <Link href='/posts/spring-boot-api-oauth-integration'>OAuth Integration</Link>
+- <Link href='/posts/spring-boot-api-coding-model'>Coding Model</Link>
 
 **Productivity**
 
-- [API Automated Tests](/posts/api-automated-tests)
-- [Log Aggregation Setup](/posts/log-aggregation-setup)
-- [Technical Support Analysis](/posts/api-technical-support-analysis)
+- <Link href='/posts/api-automated-tests'>API Automated Tests</Link>
+- <Link href='/posts/log-aggregation-setup'>Log Aggregation Setup</Link>
+- <Link href='/posts/api-technical-support-analysis'>Technical Support Analysis</Link>
 
 ### Theme 3 – Native Apps
 
 This theme covers solutions for desktop and mobile apps, and uses the recommended OAuth flows. It also provides example apps that can be used as a reference.
 
-- [Native Architecture Goals](/posts/native-architecture-goals)
+- <Link href='/posts/native-architecture-goals'>Native Architecture Goals</Link>
 
 **Initial Desktop App Code Sample**
 
-- [Overview](/posts/desktop-apps-overview)
-- [How to Run the Sample](/posts/desktop-app-how-to-run-the-code-sample)
-- [Coding Key Points](/posts/desktop-app-coding-key-points)
+- <Link href='/posts/desktop-apps-overview'>Overview</Link>
+- <Link href='/posts/desktop-app-how-to-run-the-code-sample'>How to Run the Sample</Link>
+- <Link href='/posts/desktop-app-coding-key-points'>Coding Key Points</Link>
 
 **Final Desktop App Code Sample**
 
-- [Overview / How to Run the Sample](/posts/final-desktop-sample-overview)
-- [Coding Key Points](/posts/final-desktop-app-coding-key-points)
+- <Link href='/posts/final-desktop-sample-overview'>Overview / How to Run the Sample</Link>
+- <Link href='/posts/final-desktop-app-coding-key-points'>Coding Key Points</Link>
 
 **Mobile Setup**
 
-- [Android Setup + AppAuth Sample](/posts/android-setup)
-- [Android HTTPS Debugging](/posts/android-https-debugging)
-- [iOS Setup + AppAuth Sample](/posts/ios-setup)
-- [iOS HTTPS Debugging](/posts/ios-https-debugging)
+- <Link href='/posts/android-setup'>Android Setup + AppAuth Sample</Link>
+- <Link href='/posts/android-https-debugging'>Android HTTPS Debugging</Link>
+- <Link href='/posts/ios-setup'>iOS Setup + AppAuth Sample</Link>
+- <Link href='/posts/ios-https-debugging'>iOS HTTPS Debugging</Link>
 
 **Android Code Sample**
 
-- [Code Sample Behaviour](/posts/android-code-sample-overview)
-- [How to Run the Sample](/posts/basicandroidapp-execution)
-- [Infrastructure Setup](/posts/android-infrastructure-setup)
-- [Coding Key Points](/posts/android-coding-key-points)
+- <Link href='/posts/android-code-sample-overview'>Code Sample Behaviour</Link>
+- <Link href='/posts/basicandroidapp-execution'>How to Run the Sample</Link>
+- <Link href='/posts/android-infrastructure-setup'>Infrastructure Setup</Link>
+- <Link href='/posts/android-coding-key-points'>Coding Key Points</Link>
 
 **iOS Code Sample**
 
-- [Code Sample Behaviour](/posts/ios-code-sample-overview)
-- [How to Run the Sample](/posts/how-to-run-the-ios-code-sample)
-- [Infrastructure Setup](/posts/ios-code-sample-infrastructure)
-- [Coding Key Points](/posts/ios-code-sample-coding-key-points)
+- <Link href='/posts/ios-code-sample-overview'>Code Sample Behaviour</Link>
+- <Link href='/posts/how-to-run-the-ios-code-sample'>How to Run the Sample</Link>
+- <Link href='/posts/ios-code-sample-infrastructure'>Infrastructure Setup</Link>
+- <Link href='/posts/ios-code-sample-coding-key-points'>Coding Key Points</Link>
 
 ### Theme 4 – Cloud Deployment
 
@@ -135,21 +135,21 @@ The final theme covers end-to-end deployment of components to run in the AWS Clo
 
 **OAuth Domain Setup**
 
-- [Overview](/posts/cloud-hosting)
-- [Domain Setup](/posts/cloud-domain-setup)
-- [Managed Authorization Server Setup](/posts/managed-authorization-server-setup)
+- <Link href='/posts/cloud-hosting'>Overview</Link>
+- <Link href='/posts/cloud-domain-setup'>Domain Setup</Link>
+- <Link href='/posts/managed-authorization-server-setup'>Managed Authorization Server Setup</Link>
 
 **Modern Web Deployment**
 
-- [Web Content Delivery](/posts/cdn-static-content-delivery)
-- [CloudFront SPA Extensions](/posts/lambda-edge-spa-extensions)
+- <Link href='/posts/cdn-static-content-delivery'>Web Content Delivery</Link>
+- <Link href='/posts/lambda-edge-spa-extensions'>CloudFront SPA Extensions</Link>
 
 **Serverless APIs**
 
-- [Serverless API Overview](/posts/serverless-api-overview)
-- [Serverless API Deployment](/posts/serverless-api-deployment)
-- [Serverless API Coding Model](/posts/serverless-api-coding-model)
+- <Link href='/posts/serverless-api-overview'>Serverless API Overview</Link>
+- <Link href='/posts/serverless-api-deployment'>Serverless API Deployment</Link>
+- <Link href='/posts/serverless-api-coding-model'>Serverless API Coding Model</Link>
 
 **Cloud Native**
 
-- [Cloud Native Updates](/posts/cloud--native-updates)
+- <Link href='/posts/cloud--native-updates'>Cloud Native Updates</Link>
