--- a/posts/index.mdx
+++ b/posts/index.mdx
@@ -2,13 +2,13 @@
 title: 'Main Index'
 ---
 
-- [Home Page and Business Goals](/)
+- <Link href='/'>Home Page and Business Goals</Link>
 
 ### Theme 1 - Single Page Applications
 
 Our first theme is focused on foundations and core concepts. It provides integrated solutions with SPAs, APIs and the authorization server, and delivers a Final SPA in line with current best practices.
 
-- [Web Architecture Goals](/posts/web-architecture-goals)
+- <Link href='/posts/web-architecture-goals'>Web Architecture Goals</Link>
 
 **Basic SPA Code Sample**
 
