--- a/posts/basicspa-codingkeypoints.mdx
+++ b/posts/basicspa-codingkeypoints.mdx
@@ -2,7 +2,7 @@
 title: 'Basic SPA – Coding Key Points'
 ---
 
-The [SPA and API OAuth Messages](/posts/basicspa-oauthworkflow) post explained the HTTP/S messages used by our code sample. In this post we’ll drill into some important identity related code in the SPA.
+The <Link href='/posts/basicspa-oauthworkflow'>SPA and API OAuth Messages</Link> post explained the HTTP/S messages used by our code sample. In this post we’ll drill into some important identity related code in the SPA.
 
 ### SPA Code
 
@@ -490,7 +490,7 @@ The API does not return sensitive error details to the SPA, so the error data ca
 
 We have explained how the initial SPA is coded, and the oidc-client-ts security library is doing the difficult security work. The SPA’s code will be extended in the second code sample, to complete its session management.
 
-### Next Steps
+### Next
 
-- Next we will look at the sample’s [API Coding Key Points](/posts/basicapi-codingkeypoints)
-- For a list of all blog posts see the [Index Page](/)
+- Next we will look at the sample’s <Link href='/posts/basicapi-codingkeypoints'>API Coding Key Points</Link>
+- For a list of all blog posts see the <Link href='/posts/index'>Index Page</Link>
