--- a/posts/basicspa-overview.mdx
+++ b/posts/basicspa-overview.mdx
@@ -2,7 +2,7 @@
 title: 'Basic SPA – Overview'
 ---
 
-In the [Web Architecture Goals](/posts/web-architecture-goals) post we explained that our first code sample's objective would be to get an integrated setup running on a developer PC, so that access tokens are sent between a UI, API and authorization server.
+In the <Link href='/posts/web-architecture-goals'>Web Architecture Goals</Link> post we explained that our first code sample's objective would be to get an integrated setup running on a developer PC, so that access tokens are sent between a UI, API and authorization server.
 
 ### Behaviours
 
@@ -24,9 +24,9 @@ The Basic SPA Code Sample will get the below components and endpoints talking to
 
 ### SPAs in 2021
 
-<span style={{color:'red'}}>This sample uses the traditional SPA solution, with OpenID Connect implemented solely in Javascript. This is no longer recommended, and your production apps should instead use a [Backend for Frontend](/posts/spa-back-end-for-front-end) approach.</span>
+<span style={{color:'red'}}>This sample uses the traditional SPA solution, with OpenID Connect implemented solely in Javascript. This is no longer recommended, and your production apps should instead use a <Link href='/posts/spa-back-end-for-front-end'>Backend for Frontend</Link> approach.</span>
 
-The traditional SPA flow remains useful for representing a pure SPA architecture, and learning about OAuth endpoints and messages. This blog's [Final SPA](https://authguidance.com/final-spa-overview/) provides a BFF based solution, but requires a more complex flow.
+The traditional SPA flow remains useful for representing a pure SPA architecture, and learning about OAuth endpoints and messages. This blog's <Link href='/posts/final-spa-overview'>Final SPA</Link> provides a BFF based solution, but requires a more complex flow.
 
 ### Code Download
 
@@ -82,5 +82,5 @@ We have an initial objective and we will build it in a solid manner, with clean 
 
 ### Next
 
-- Next we will provide simple steps on [How to Run the Code Sample](/posts/basicspa-execution)
-- For a list of all blog posts see the [Index Page](/posts/index)
+- Next we will explain <Link href='/posts/basicspa-execution'>How to Run the Code Sample</Link>
+- For a list of all blog posts see the <Link href='/posts/index'>Index Page</Link>
