--- a/posts/web-architecture-goals.mdx
+++ b/posts/web-architecture-goals.mdx
@@ -2,7 +2,7 @@
 title: 'Web Architecture Goals'
 ---
 
-The [Home Page](/) described OAuth in terms of overall goals for a software platform. In this post we will describe what we are looking for in an optimal web architecture, which is not just about security. This post briefly summarizes some goals and concerns for web apps.
+The <Link href='/'>Home Page</Link> described OAuth in terms of overall goals for a software platform. In this post we will describe what we are looking for in an optimal web architecture, which is not just about security. This post briefly summarizes some goals and concerns for web apps.
 
 ### Goal: Best User Experience
 
@@ -72,9 +72,9 @@ This blog's posts and the accompanying code samples will explain OAuth features 
 
 | Stage | Description |
 | ----- | ----------- |
-| [Basics](/posts/basicspa-overview) | Getting an SPA, API and authorization server working together, with a developer friendly setup |
-| [Updated](/posts/improved-spa-code-sample-overview) | SPA session management for a complete user experience, and flexible API authorization in the API, to protect data |
-| [Final](/posts/final-spa-overview) | A security hardened SPA that runs from a content delivery network and interacts with cloud deployed APIs |
+| <Link href='/posts/basicspa-overview'>Basics</Link> | Getting an SPA, API and authorization server working together, with a developer friendly setup |
+| <Link href='/posts/improved-spa-code-sample-overview'>Updated</Link> | SPA session management for a complete user experience, and flexible API authorization in the API, to protect data |
+| <Link href='/posts/final-spa-overview'>Final</Link> | A security hardened SPA that runs from a content delivery network and interacts with cloud deployed APIs |
 
 We will aim to achieve all of the goals in this page, but it will be a tricky journey. Once complete though, the architecture will be in a great place.
 
@@ -84,5 +84,5 @@ We have highlighted some desired behaviour, and next we will start our first obj
 
 ### Next
 
-- Next we will provide an [Initial SPA Code Sample Overview](/posts/basicspa-overview)
-- For a list of all blog posts see the [Index Page](/posts/index)
+- Next we will provide an <Link href='/posts/basicspa-overview'>Initial SPA Code Sample Overview</Link>
+- For a list of all blog posts see the  <Link href='/posts/index'>Index Page</Link>
